added styles and some other images too

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   </head>
   <body>
     <main>
+      <img
+        src="./assets/mention_isometric 2.svg"
+        alt="acordion-image"
+        class="acordion-image"
+      />
+      <img
+        src="./assets/Path Copy.svg"
+        alt="image-shadow"
+        class="image-shadow"
+      />
+      <img
+        src="./assets/mention_isometric_desktop.svg"
+        alt="desktop"
+        class="desktop-image"
+      />
+      <img src="./assets/Group 6.svg" alt="box" class="box" />
+      <img src="./assets/Group 2.svg" alt="desktop" class="desktop-shadow" />
+      <h2 class="header">FAQ</h2>
       <div class="question-div">
         <div class="question-div-header">
           <p class="question">How many team members can I invite ?</p>
@@ -18,51 +36,56 @@
             class="arrow"
           />
         </div>
-        <p class="answer">Answer 1</p>
+        <p class="answer">You can invite maximum 3 member</p>
       </div>
       <div class="question-div">
         <div class="question-div-header">
-          <p class="question">How many team members can I invite ?</p>
+          <p class="question">What is the maximum file upload size?</p>
           <img
             src="assets/icon-arrow-down.svg"
             alt="arrow-icon"
             class="arrow"
           />
         </div>
-        <p class="answer">Answer 2</p>
+        <p class="answer">
+          No more than 2GB. All files in your account must fit your allotted
+          storage space.
+        </p>
       </div>
       <div class="question-div">
         <div class="question-div-header">
-          <p class="question">How many team members can I invite ?</p>
+          <p class="question">How do I reset my password?</p>
           <img
             src="assets/icon-arrow-down.svg"
             alt="arrow-icon"
             class="arrow"
           />
         </div>
-        <p class="answer">Answer 3</p>
+        <p class="answer">
+          Password Reset can be find down there in settings section
+        </p>
       </div>
       <div class="question-div">
         <div class="question-div-header">
-          <p class="question">How many team members can I invite ?</p>
+          <p class="question">Can I cancel my subscription?</p>
           <img
             src="assets/icon-arrow-down.svg"
             alt="arrow-icon"
             class="arrow"
           />
         </div>
-        <p class="answer">Answer 4</p>
+        <p class="answer">Just click once more on it</p>
       </div>
       <div class="question-div">
         <div class="question-div-header">
-          <p class="question">How many team members can I invite ?</p>
+          <p class="question">Do you provide additional support?</p>
           <img
             src="assets/icon-arrow-down.svg"
             alt="arrow-icon"
             class="arrow"
           />
         </div>
-        <p class="answer">Answer 5</p>
+        <p class="answer">It depend on your budget</p>
       </div>
     </main>
   </body>
